crates/control/tests/it/snapshots/it__builds__create_test.snap
---
source: crates/control/tests/it/builds.rs
assertion_line: 51
expression: redactor.response_json(&mut response).await.unwrap()
---
{
  "data": {
    "attributes": {
      "account_id": "[a1]",
      "catalog": {
        "$schema": null,
        "captures": {},
        "collections": {
          "acmeCo/collection": {
            "derivation": null,
            "journals": {
              "fragments": {}
            },
            "key": [
              "/key"
            ],
            "projections": {},
            "schema": {
              "properties": {
                "key": {
                  "type": "integer"
                }
              },
              "required": "key",
              "type": "object"
            }
          }
        },
        "import": [],
        "materializations": {},
        "npmDependencies": {},
        "resources": {},
        "storageMappings": {},
        "tests": {}
      },
      "created_at": "[datetime]",
      "id": "[b1]",
      "state": {
        "type": "queued"
      },
      "updated_at": "[datetime]"
    },
    "id": "[b1]",
    "links": {
      "self": "http://127.0.0.1:0/builds/[b1]"
    },
    "type": "build"
  }
}
